Working on text mouseover for line graphs

--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -77,6 +77,15 @@
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
+                        <h2 class="panel-title">Particular Matter (PM2.5)<div class="pull-right">&micro;g/m<sup>3</sup></h2>
+                    </div>
+                    <div class="panel-body" style="overflow: scroll">
+                        <line-graph val="data" width="1040" height="300" type="pm25"></sample-graph>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
                         <h2 class="panel-title">Ozone<div class="pull-right">Parts Per Million (PPM)</h2>
                     </div>
                     <div class="panel-body" style="overflow: scroll">
