--- a/templates/ng/home.html
+++ b/templates/ng/home.html
@@ -1,4 +1,4 @@
-<div style="padding-top: 30px">
+<!--<div style="padding-top: 30px">
     <div class="jumbotron">
         <div class="container">
             <div class="row">
@@ -27,4 +27,7 @@
             <p class="lead">Air Canary is currently under development.  We plan to have it running properly by November 2013.</p>
         </div>
     </div>
+</div>-->
+<div class="container">
+    <div style="height: 100vh; background: #fff; font-size: 24px; text-align: center; vertical-align: middle; color: #666; line-height: 100vh">Loading</div>
 </div>
