Updated forecast script, search

--- a/bootstrap/custom-variables.less
+++ b/bootstrap/custom-variables.less
@@ -33,7 +33,7 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         @brand-yellow; // @quest-canary; // #f0dd32; // #428bca;
+@brand-primary:         #ddd; // @brand-yellow; // @quest-canary; // #f0dd32; // #428bca;
 @brand-success:         @brand-green; // @troubled-seas; // #5cb85c;
 @brand-warning:         @brand-orange; // @rioma-orange; // #f0ad4e;
 @brand-danger:          @brand-red; // @quest-cherry; // #d9534f;
