--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -7,11 +7,23 @@
     <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="/static/css/bootstrap.css"/>
     <link href="/static/css/main.css" rel="stylesheet" media="screen"/> 
+
+    <style>
+@media (min-width: 768px){
+    .navbar-nav{
+        float:none;
+        margin: 0 auto;
+        display: table;
+        table-layout: fixed;
+    }
+}
+    </style>
 </head>
 <body>
     <div class="container" ng-controller="MainCntl" >
         <!-- Static navbar -->
         <div class="navbar navbar-default navbar-fixed-top">
+            <!--
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
@@ -21,20 +33,38 @@
                 <div class="pull-left" style="padding: 5px"><img src="/static/img/canary1.png" style="width: 40px"/></div>
                 <span class="navbar-brand">Air Canary</a>
             </div>
+            -->
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>
+                        <img src="/static/img/canary1.png" style="width: 40px; padding-top: 5px"/>
+                    </li>
+                    <li>
+                         <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Location" ng-model="name">
+                            </div>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+                    </li>
+<!--
                     <li class="dropdown active">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Data <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li ng-repeat="s in sites"><a href="/#/site/{[{s.code}]}">{[{s.name}]}</a></li>
                         </ul>
                     </li>
+-->
+                    <!--
                     <li><a href="/#/api">API</a></li>
+-->
                 </ul>
+                <!--
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/#/about">About</a></li>
                     <li><a href="/#/contact">Contact</a></li>
                 </ul>
+                -->
             </div><!--/.nav-collapse -->
         </div>
         <div style="padding-top: 50px">
