--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -45,6 +45,7 @@
                                 <input type="text" class="form-control" placeholder="Location" ng-model="name">
                             </div>
                             <button type="submit" class="btn btn-default">Submit</button>
+                            <a href="/#/a/41/-111">a</a>
                         </form>
                     </li>
 <!--
