Working on areas

--- a/templates/ng/area.html
+++ b/templates/ng/area.html
@@ -1,1 +1,13 @@
-<div style="margin: 100px"><span>{[{ area.name }]}</span></a>
+<div class="container">
+    <div class="panel panel-default">
+
+        <div class="panel-heading">
+            <div class="panel-title">{[{ area.name }]}</div>
+        </div>
+
+        <div class="panel-body">
+
+        </div>
+    </div>
+</div>
+
