--- a/templates/ng/area.html
+++ b/templates/ng/area.html
@@ -1,13 +1,145 @@
-<div class="container">
-    <div class="panel panel-default">
+    <style>
+        .line { fill: none; stroke: steelblue; stroke-width: 1.5px; }
+        .axis path,
+        .axis line { fill: none; stroke: #000; shape-rendering: crispEdges; }
+        .x.axis path { display: none; }
+        .overlay { fill: none; pointer-events: all; }
+        .focus circle { fill: none; stroke: steelblue; }
+    </style>
 
-        <div class="panel-heading">
-            <div class="panel-title">{[{ area.name }]}</div>
+    <div class="container">
+        <div class="row" style="margin-bottom: 10px">
+            <div class="col-md-12">
+                <div style="margin-top: 40px; margin-bottom: 20px">
+                    <div class="pull-right">  
+                        <div class="" style="width: 50px; height: 40px; float: left; margin-left: 5px; padding: 2px" ng-repeat="s in sites">
+                            <div style="color: #fff; text-align:center; line-height: 36px; width: 50px; height: 36px; cursor: pointer" ng-click="loadSite(s.code)" class="forecast-green">{[{ s.name | boxName }]}</div>
+                        </div>
+                        <!--<select class="form-control" name="code" id="code" ng-model="code" ng-options="s.code as s.name for s in sites"></select>-->
+                    </div>
+                    <div class="pull-left" style="height: 40px; line-height: 40px; font-weight: bold; font-size: 24px; margin-left: 5px">{[{ name }]}</div>
+                </div>
+            </div>
         </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="panel panel-default" ng-repeat="d in data" ng-show="$first">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Current Conditions<div class="pull-right">{[{ d.observed | ago }]}</div></h2>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">Temp:</div>
+                            <div class="col-xs-3">{[{ d.temperature | number: 0 }]}&deg;F</div>
+                            <div class="col-xs-3">Humidity:</div>
+                            <div class="col-xs-3">{[{ d.relative_humidity }]}<span ng-show="d.relative_humidity">%</span><span ng-hide="d.relative_humidity">--</span></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-3">PM 2.5:</div>
+                            <div class="col-xs-3">{[{ d.pm25 }]}<span ng-show="d.pm25" style="font-size: 10px"> &micro;g/m<sup>3</sup></span></div>
+                            <div class="col-xs-3">Ozone:</div>
+                            <div class="col-xs-3">{[{ d.ozone }]}<span ng-show="d.ozone" style="font-size: 10px"> ppm</span><span ng-hide="d.ozone">--</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Air Quality Forecast</h2>
+                    </div>
+                    <div class="panel-body">
 
-        <div class="panel-body">
+                        <div class="row">
+                            <div ng-repeat="f in forecast" class="col-xs-4" style="padding: 5px">
+                                <div class="forecast-{[{ f.description | forecastColor }]}" style="width: 100%; color: #fff">
+                                    <div style="padding: 10px" class="row">
+                                        <div class="col-xs-6">{[{ f.date|date:'EEEE' }]}</div>
+                                        <div class="col-xs-6 hidden-xs" style="text-align: right">{[{ f.description }]}</div>  
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Particular Matter (PM2.5)<div class="pull-right">&micro;g/m<sup>3</sup></div></h2>
+                    </div>
+                    <div class="panel-body" style="overflow: scroll">
+                        <sample-graph val="data" width="1040" height="300" type="pm25"></sample-graph>
+                    </div>
+                </div>
 
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Particular Matter (PM2.5)<div class="pull-right">&micro;g/m<sup>3</sup></h2>
+                    </div>
+                    <div class="panel-body" style="overflow: scroll">
+                        <line-graph val="data" width="1040" height="300" type="pm25"></sample-graph>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Ozone<div class="pull-right">Parts Per Million (PPM)</h2>
+                    </div>
+                    <div class="panel-body" style="overflow: scroll">
+                        <sample-graph val="data" width="1040" height="300" type="ozone"></sample-graph>
+                    </div>
+                </div>
+
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Ozone<div class="pull-right">Parts Per Million (PPM)</h2>
+                    </div>
+                    <div class="panel-body" style="overflow: scroll">
+                        <line-graph val="data" width="1040" height="300" type="ozone"></sample-graph>
+                    </div>
+                </div>
+
+                <h2>Data</h2>
+                <div class="table-responsive">
+                <table class="table table-condensed table-striped">
+                <thead>
+                <tr>
+                    <th>Observed</th>
+                    <th>Ozone</th>
+                    <th>Ozone 8-hour</th>
+                    <th>PM 2.5</th>
+                    <th>PM 2.5 24-hour</th>
+                    <th>Nox</th>
+                    <th>NO2</th>
+                    <th>Temp</th>
+                    <th>Humidity</th>
+                    <th>Wind speed</th>
+                    <th>CO</th>
+                    <th>Solar Radiation</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="d in data">
+                        <td>{[{ d.observed | date:'short' }]}</td>
+                        <td class="ozone">{[{ d.ozone }]}<span ng-show="d.ozone"> ppm</span></td>
+                        <td>{[{ d.ozone_8hr_avg }]}<span ng-show="d.ozone_8hr_avg"> ppm</span></td>
+                        <td class="pm25">{[{ d.pm25 }]}<span ng-show="d.pm25"> &micro;g/m<sup>3</sup></span></td>
+                        <td>{[{ d.pm25_24hr_avg }]}<span ng-show="d.pm25_24hr_avg"> &micro;g/m<sup>3</sup></span></td>
+                        <td>{[{ d.nox }]}<span ng-show="d.nox"> ppm</span></td>
+                        <td>{[{ d.no2 }]}<span ng-show="d.no2"> ppm</span></td>
+                        <td>{[{ d.temperature | number:0 }]}<span ng-show="d.temperature">&deg;</span></td>
+                        <td>{[{ d.relative_humidity }]}<span ng-show="d.relative_humidity">%</span></td>
+                        <td>{[{ d.wind_speed }]}<span ng-show="d.wind_speed"> mph {[{ d.wind_direction | dir }]}</span></td>
+                        <td>{[{ d.co }]}</td>
+                        <td>{[{ d.solar_radiation }]}</td>
+                    </tr>
+                </tbody>
+                </table>
+                </div><!-- table-responsive -->
+            </div>
         </div>
     </div>
-</div>
-
