--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -42,9 +42,9 @@
                     <li>
                          <form class="navbar-form navbar-left" role="search">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Location" ng-model="name">
+                                <input type="text" class="form-control" placeholder="Location" ng-model="location">
                             </div>
-                            <button type="submit" class="btn btn-default">Submit</button>
+                            <button type="submit" class="btn btn-default" ng-click="sendLocation(location)">Submit</button>
                             <a href="/#/a/41/-111">a</a>
                         </form>
                     </li>
