--- a/templates/ng/area.html
+++ b/templates/ng/area.html
@@ -8,6 +8,20 @@
     </style>
 
     <div class="container">
+        <div class="row">
+            <div class="col-xs-4" style="height: 400px; background: #3A9D12">
+                <div class="row">
+                    <div class="col-xs-2" style="height: 100%; color: #333; line-height: 400px; text-align: center">PM2.5</div>
+                    <div class="col-xs-8" style="height: 100%; vertical-align: middle; line-height: 400px; font-size: 100px; font-weight: strong; color: #fff">3.<sup>5</sup></div>
+                    <div class="col-xs-2" style="height: 100%"></div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-4">48&deg;F</div>
+                    <div class="col-xs-4">50%</div>
+                    <div class="col-xs-4">O<sup>3</sup></div>
+                </div>
+            </div>
+        </div>
         <div class="row" style="margin-bottom: 10px">
             <div class="col-md-12">
                 <div style="margin-top: 40px; margin-bottom: 20px">
