Add monitoring sites to area page

--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -2,6 +2,7 @@
 <html ng-app="acApp">
 <head>
     <title>Air Canary</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">-->
