--- a/templates/ng/area.html
+++ b/templates/ng/area.html
@@ -117,6 +117,23 @@
                     </div>
                 </div>
 
+                <h2>Sites</h2>
+
+                <div class="table-responsive">
+                    <table class="table table-condensed table-striped">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="s in msites">
+                                <td>{[{ s.name }]}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
                 <h2>Data</h2>
                 <div class="table-responsive">
                 <table class="table table-condensed table-striped">
