Minor fix to sites

--- a/templates/ng/area.html
+++ b/templates/ng/area.html
@@ -135,7 +135,7 @@
                                 <td>{[{ s.code }]}</td>
                                 <td>{[{ s.name }]}</td>
                                 <td>{[{ s.state_province }]}</td>
-                                <td>{[{ s.country_iso }]}</td>
+                                <td>{[{ s.country }]}</td>
                                 <td>{[{ s.location }]}</td>
                             </tr>
                         </tbody>
