--- a/templates/ng/point.html
+++ b/templates/ng/point.html
@@ -1,4 +1,4 @@
-<div style="padding: 100px">
+<div style="padding: 100px" class="aqi-{[{ color }]}">
     <div>Ozone: {[{ ozone }]}</div>
     <div>PM 2.5: {[{ pm25 }]}</div>
     <div>Combined: {[{ combined }]}</div>
