--- a/templates/ng/p/index.html
+++ b/templates/ng/p/index.html
@@ -4,8 +4,6 @@
     <title>Air Canary</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="/static/css/bootstrap.css"/>
     <link href="/static/css/main.css" rel="stylesheet" media="screen"/> 
 
@@ -20,21 +18,10 @@
 }
     </style>
 </head>
-<body>
+<body class="aqi-{[{ color }]}">
     <div class="container" ng-controller="MainCntl" >
         <!-- Static navbar -->
-        <div class="navbar navbar-default navbar-fixed-top">
-            <!--
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="pull-left" style="padding: 5px"><img src="/static/img/canary1.png" style="width: 40px"/></div>
-                <span class="navbar-brand">Air Canary</a>
-            </div>
-            -->
+        <div class="aqi-{[{ color }]} navbar navbar-default navbar-fixed-top">
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>
@@ -46,29 +33,12 @@
                                 <input type="text" class="form-control" placeholder="Location" ng-model="location">
                             </div>
                             <button type="submit" class="btn btn-default" ng-click="sendLocation(location)">Submit</button>
-                            <a href="/#/a/41/-111">a</a>
                         </form>
                     </li>
-<!--
-                    <li class="dropdown active">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Data <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li ng-repeat="s in sites"><a href="/#/site/{[{s.code}]}">{[{s.name}]}</a></li>
-                        </ul>
-                    </li>
--->
-                    <!--
-                    <li><a href="/#/api">API</a></li>
--->
                 </ul>
-                <!--
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/#/about">About</a></li>
-                    <li><a href="/#/contact">Contact</a></li>
-                </ul>
-                -->
             </div><!--/.nav-collapse -->
         </div>
+
         <div style="padding-top: 50px">
             <div ng-view>
                 <div class="container">
@@ -77,7 +47,7 @@
             </div>
         </div>
 
-        <footer>
+        <footer style="padding: 10px">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6">&copy; 2013</div>
