--- a/templates/ng/point.html
+++ b/templates/ng/point.html
@@ -1,7 +1,17 @@
-<div style="padding: 100px" class="aqi-{[{ color }]}">
-    <div>Ozone: {[{ ozone }]}</div>
+<div style="height: 50vh" class="aqi-{[{ color }]} container">
+    <div class="row">
+        <div class="col-md-2">Ozone</div>
+        <div class="col-md-10" style="font-size: 20vh">{[{ ozone }]}</div>
+    </div>
+</div>
+<div>
     <div>PM 2.5: {[{ pm25 }]}</div>
     <div>Combined: {[{ combined }]}</div>
     <div>Tomorrow: {[{ forecast_today }]}</div>
     <div>Today: {[{ forecast_today }]}</div>
+</div>
+
+<div style="height: 50vh">
+
+
 </div>
