--- a/bootstrap/main.less
+++ b/bootstrap/main.less
@@ -1,5 +1,6 @@
 .forecast-green { background-color: @brand-green }
 .forecast-yellow { background-color: @brand-yellow }
+.forecast-orange { background-color: @brand-orange }
 .forecast-red { background-color: @brand-red }
 
 .bar-none { fill: #ccc }
