--- a/templates/ng/point.html
+++ b/templates/ng/point.html
@@ -1,14 +1,16 @@
 <div style="height: 50vh" class="aqi-{[{ color }]} container">
-    <div class="row">
-        <div class="col-md-2">Ozone</div>
-        <div class="col-md-10" style="font-size: 20vh">{[{ ozone }]}</div>
+    <div class="row" style="height: 100%">
+        <div class="col-xs-2" style="vertical-align: middle; line-height: 30vh">Combined</div>
+        <div class="col-xs-8" style="font-size: 20vh; color: #fff">{[{ combined }]}</div>
     </div>
 </div>
-<div>
+<div style="height: 50vh">
+    <div>Ozone: {[{ ozone }]}</div>
     <div>PM 2.5: {[{ pm25 }]}</div>
     <div>Combined: {[{ combined }]}</div>
     <div>Tomorrow: {[{ forecast_today }]}</div>
     <div>Today: {[{ forecast_today }]}</div>
+    <div>{[{ label }]}</div>
 </div>
 
 <div style="height: 50vh">
