--- a/templates/ng/point.html
+++ b/templates/ng/point.html
@@ -12,8 +12,8 @@
     <div>Ozone: {[{ ozone }]}</div>
     <div>PM 2.5: {[{ pm25 }]}</div>
     <div>Combined: {[{ combined }]}</div>
-    <div>Tomorrow: {[{ forecast_today }]}</div>
-    <div>Today: {[{ forecast_today }]}</div>
+    <div>Tomorrow: {[{ tomorrow }]}</div>
+    <div>Today: {[{ today }]}</div>
     <div>{[{ label }]}</div>
 </div>
 
