--- a/templates/ng/point.html
+++ b/templates/ng/point.html
@@ -5,7 +5,7 @@
         <div class="col-xs-4" style="vertical-align: middle; line-height: 30vh; font-size: 3vh">AQI</div>
     </div>
     <div class="row">
-        <div class="col-xs-12" style="text-align: center; font-size: 5vh">SLC / Davis</div>
+        <div class="col-xs-12" style="text-align: center; font-size: 5vh">{[{ locationLoaded }]}</div>
     </div>
 </div>
 <div style="height: 50vh">
