Working on new design

--- a/bootstrap/custom-variables.less
+++ b/bootstrap/custom-variables.less
@@ -11,7 +11,7 @@
 @quest-cherry:          #DC4358; // red
 
 @brand-purple:          @al3;
-@brand-green:           @troubled-seas;
+@brand-green:           #70bd22;
 @brand-yellow:          @quest-canary;
 @brand-orange:          @rioma-orange;
 @brand-red:             @quest-cherry;
@@ -54,7 +54,8 @@
 // Typography
 // -------------------------
 
-@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+//@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif: 'Montserrat', sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 @font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
