--- a/templates/ng/point.html
+++ b/templates/ng/point.html
@@ -1,8 +1,15 @@
 <div style="height: 50vh" class="aqi-{[{ color }]} container">
-    <div class="row" style="height: 75%">
-        <div class="col-xs-4" style="vertical-align: middle; line-height: 30vh; text-align: right; font-size: 3vh">Combined</div>
-        <div class="col-xs-4" style="font-size: 20vh; color: #fff; text-align: center">{[{ combined }]}</div>
-        <div class="col-xs-4" style="vertical-align: middle; line-height: 30vh; font-size: 3vh">AQI</div>
+    <div class="row" style="height: 100%; border: 1px solid #999">
+        <div class="col-xs-12">
+            <div class="row">
+                <div class="col-xs-12">Testasdfklsjfdsjfkdj</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-4" style="vertical-align: middle; line-height: 30vh; text-align: right; font-size: 3vh">Combined</div>
+                <div class="col-xs-4" style="font-size: 20vh; color: #fff; text-align: center">{[{ combined }]}</div>
+                <div class="col-xs-4" style="vertical-align: middle; line-height: 30vh; font-size: 3vh">AQI</div>
+            </div>
+        </div>
     </div>
     <div class="row">
         <div class="col-xs-12" style="text-align: center; font-size: 5vh">{[{ locationLoaded }]}</div>
