--- a/templates/ng/t.html
+++ b/templates/ng/t.html
@@ -9,6 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
     <style>
         * { color: #fff }
@@ -17,69 +18,65 @@
 <body class="aqi-green" style="height: 100%">
 
 
-<nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Air Canary</a>
-    </div>
+<nav class="navbar navbar-default aqi-yellow" role="navigation" style="margin-bottom: 0">
+    <div class="container-fluid">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <div style="float: left; width: 25%">
+                <div style="padding-left: 10px">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu-navbar-collapse" style="float: left; border-width: 0">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar" style="background-color: #eee"></span>
+                        <span class="icon-bar" style="background-color: #eee"></span>
+                        <span class="icon-bar" style="background-color: #eee"></span>
+                    </button>
+                </div>
+            </div>
+
+            <div style="float: left; width: 50%; text-align: center"><a class="navbar-brand" href="#" style="width: 100%; font-size: 200%; color: #fff">AirCanary</a></div>
+
+            <div style="float: left; width: 25%; text-align: right">
+                <div style="float: right">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#search-navbar-collapse" style="border-width: 0; float: left">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="glyphicon glyphicon-search" style="font-size: 150%"></span>
+                    </button>
+                </div>
+            </div>
+
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="search-navbar-collapse">
+            <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+        </div><!-- /.navbar-collapse -->
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="menu-navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">About</a></li>
+                <li><a href="#">Api</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container" style="height: 100%">
-    <div class="row aqi-yellow" style="height: 50%">
+<div class="container" style="height: 88%">
+    <div class="row aqi-yellow" style="height: 48%">
         <div class="col-xs-12">
-            <div class="row" style="padding: 20px; color: #eee; font-size: 120%">Now</div>
-            <div class="row">
-                <div class="col-xs-5" style="padding: 0"><img src="/static/img/climacons/svg/Cloud-Sun.svg" style="fill: #fff; width: 100%"/></div>
+            <div class="row" style="padding: 30px; color: #eee; font-size: 120%">Now</div>
+            <div class="row" style="padding: 20px 0">
+                <div class="col-xs-5" style="padding: 0"><img src="/static/img/climacons/svg/Cloud-Sun.svg"/></div>
                 <div class="col-xs-7">
                     <div class="row">&nbsp;</div>
-                    <div class="row" style="font-size: 150%">
+                    <div class="row" style="font-size: 140%">
                         <div class="col-xs-12 text-right">Salt Lake City, UT</div>
                     </div>
                     <div class="row" style="font-size: 250%">
@@ -89,13 +86,28 @@
             </div>
         </div>
     </div>
-    <div class="row" style="background-color: #333; height: 10%">
+    <div class="row" style="background-color: #333; height: 12%">
         <div class="col-xs-12" style="height: 100%">
-            <div style="margin: 10px">Test</div>
+            <div class="row" style="height: 100%">
+                <div class="col-xs-4" style="font-size: 120%; top: 32%">PM2.5 <span style="border: 1px solid #60bd22; padding: 3px">31</span></div>
+                <div class="col-xs-4" style="font-size: 120%; top: 32%">Ozone <span style="border: 1px solid #60bd22; padding: 3px">22</span></div>
+                <div class="col-xs-4 text-right" style="font-size: 120%; top: 17%">
+                    <div style="display: inline-block; text-align: center">
+                        <div><span class="glyphicon glyphicon-stats"></span></div>
+                        <div style="margin-top: -5px"><span style="font-size: 90%">Details</span></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="row aqi-red" style="height: 20%">Test</div>
-    <div class="row aqi-maroon" style="height: 20%">Test</div>
+    <div class="row aqi-red" style="height: 20%">
+        <div class="col-xs-6" style="font-size: 150%; top: 35%">Today</div>
+        <div class="col-xs-6 text-right" style="font-size: 100%; top: 40%">Unhealthy</div>
+    </div>
+    <div class="row aqi-maroon" style="height: 20%">
+        <div class="col-xs-6" style="font-size: 150%; top: 35%">Tomorrow</div>
+        <div class="col-xs-6 text-right" style="font-size: 100%; top: 40%">Very Unhealthy</div>
+    </div>
 </div>
 
 
