More design tweaks

--- a/templates/ng/t.html
+++ b/templates/ng/t.html
@@ -16,7 +16,7 @@
         * { color: #fff }
         .vcontainer { display: table !important; height: 100% }
         .vcontent { display: table-cell; vertical-align: middle; height: 100% }
-        .rounded-border { border: 1px solid #60bd22; padding: 3px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
+        .rounded-border { border: 1px solid #60bd22; padding: 3px 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
     </style>
 </head>
 <body class="aqi-green" style="height: 100%">
@@ -76,7 +76,7 @@
 <div class="container" style="height: 89%">
     <div class="row aqi-yellow" style="height: 48%">
         <div class="col-xs-12">
-            <div class="row" style="padding: 30px; color: #eee; font-size: 120%">Now</div>
+            <div class="row" style="padding: 20px; color: #eee; font-size: 120%">Now</div>
             <div class="row" style="padding: 0">
                 <div class="col-xs-5"><span class="fs1 climacon cloud sun" style="font-size: 800%" aria-hidden="true"></span></div>
                 <div class="col-xs-7">
@@ -125,7 +125,7 @@
     </div>
     <div class="row aqi-maroon" style="height: 20%">
         <div class="col-xs-6 vcontainer">
-            <div class="vcontent">Tomorrow</div>
+            <div class="vcontent" style="font-size: 150%">Tomorrow</div>
         </div>
         <div class="col-xs-6 text-right vcontainer">
             <div class="vcontent">Very Unhealthy</div>
