--- a/aircanary/places/templates/places/home.html
+++ b/aircanary/places/templates/places/home.html
@@ -79,7 +79,7 @@
         <div class="col-xs-12">
             <div class="row" style="padding: 20px; color: #eee; font-size: 120%">Now</div>
             <div class="row" style="padding: 0">
-                <div class="col-xs-5"><span class="fs1 climacon cloud sun" style="font-size: 800%" aria-hidden="true"></span></div>
+                <div class="col-xs-5"><span class="fs1 climacon cloud sun" style="font-size: 7em" aria-hidden="true"></span></div>
                 <div class="col-xs-7">
                     <div class="row">&nbsp;</div>
                     <div class="row" style="font-size: 120%">
@@ -94,7 +94,7 @@
     </div>
     <div class="row" style="background-color: #333; height: 12%">
         <div class="col-xs-12" style="height: 100%">
-            <div class="row" style="height: 100%; font-size: 120%">
+            <div class="row" style="height: 100%; font-size: 1.1em">
                 <div class="col-xs-4 vcontainer">
                     <div class="vcontent">
                         <div>PM2.5 <span class="rounded-border">31</span></div>
