--- a/aircanary/places/templates/places/home.html
+++ b/aircanary/places/templates/places/home.html
@@ -83,10 +83,10 @@
                 <div class="col-xs-7">
                     <div class="row">&nbsp;</div>
                     <div class="row" style="font-size: 120%">
-                        <div class="col-xs-12 text-right">Salt Lake City, UT</div>
+                        <div class="col-xs-12 text-right">{{ place.name }}</div>
                     </div>
                     <div class="row" style="font-size: 250%">
-                        <div class="col-xs-12 text-right">69&deg;</div>
+                        <div class="col-xs-12 text-right">{{ place.temperature }}&deg;</div>
                     </div>
                 </div>
             </div>
@@ -97,12 +97,12 @@
             <div class="row" style="height: 100%; font-size: 1.1em">
                 <div class="col-xs-4 vcontainer">
                     <div class="vcontent">
-                        <div>PM2.5 <span class="rounded-border">{{pm25}}</span></div>
+                        <div>PM2.5 <span class="rounded-border">{{ place.pm25 }}</span></div>
                     </div>
                 </div>
                 <div class="col-xs-4 vcontainer">
                     <div class="vcontent">
-                        <div>Ozone <span class="rounded-border">22</span></div>
+                        <div>Ozone <span class="rounded-border">{{ place.ozone }}</span></div>
                     </div>
                 </div>
                 <div class="col-xs-4 text-right vcontainer">
@@ -121,7 +121,7 @@
             <div class="vcontent" style="font-size: 150%">Today</div>
         </div>
         <div class="col-xs-6 text-right vcontainer">
-            <div class="vcontent">Unhealthy {{today}}</div>
+            <div class="vcontent">Unhealthy {{ place.today }}</div>
         </div>
     </div>
     <div class="row aqi-maroon" style="height: 20%">
@@ -129,7 +129,7 @@
             <div class="vcontent" style="font-size: 150%">Tomorrow</div>
         </div>
         <div class="col-xs-6 text-right vcontainer">
-            <div class="vcontent">Very Unhealthy {{tomorrow}}</div>
+            <div class="vcontent">Very Unhealthy {{ place.tomorrow }}</div>
         </div>
     </div>
 </div>
