--- a/aircanary/places/templates/places/desktop.html
+++ b/aircanary/places/templates/places/desktop.html
@@ -24,7 +24,7 @@
 <body class="{{ place.combined.css }}" style="height: 100%">
 
 
-<nav class="navbar navbar-default aqi-yellow" role="navigation" style="margin-bottom: 0">
+    <nav class="navbar navbar-default {{ place.combined.css }}" role="navigation" style="margin-bottom: 0">
     <div class="container-fluid">
 
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -76,7 +76,7 @@
 
 
 <div class="container" style="height: 89%">
-    <div class="row aqi-yellow" style="height: 48%">
+    <div class="row {{ place.combined.css }}" style="height: 48%">
         <div class="col-xs-12">
             <div class="row" style="padding: 20px; color: #eee; font-size: 120%">Currently</div>
             <div class="row" style="padding: 0">
