--- a/aircanary/places/templates/places/desktop.html
+++ b/aircanary/places/templates/places/desktop.html
@@ -50,12 +50,12 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-2">&nbsp;</div>
-                        <div class="col-xs-5 vcontainer" style="background: #009900; padding: 5px; text-align: center">
+                        <div class="col-xs-5 vcontainer {{ place.combined.css }}-dark" style="padding: 5px; text-align: center">
                             <div class="vcontent">
                                 <div>PM2.5 <span class="rounded-border">{{ place.pm25.value }}</span></div>
                             </div>
                         </div>
-                        <div class="col-xs-5 vcontainer" style="background: #009900; padding: 5px; text-align: center">
+                        <div class="col-xs-5 vcontainer {{ place.combined.css }}-dark" style="padding: 5px; text-align: center">
                             <div class="vcontent">
                                 <div>Ozone <span class="rounded-border">{{ place.ozone.value }}</span></div>
                             </div>
@@ -67,11 +67,11 @@
         <div class="col-xs-6" style="padding-top: 30px">
             <div class="row" style="margin-bottom: 20px">
                 <div class="col-xs-3"></div>
-                <div class="col-xs-6 {{ place.today.css }}" style="padding: 20px; text-align: center; border: 1px solid #eee">Today</div>
+                <div class="col-xs-6 {{ place.today.css }}-light" style="padding: 20px; text-align: center">Today</div>
             </div>
             <div class="row" style="margin-bottom: 20px">
                 <div class="col-xs-3"></div>
-                <div class="col-xs-6 {{ place.tomorrow.css }}" style="padding: 20px; text-align: center; border: 1px solid #eee">Tomorrow</div>
+                <div class="col-xs-6 {{ place.tomorrow.css }}-light" style="padding: 20px; text-align: center">Tomorrow</div>
             </div>
         </div>
     </div>
