--- a/aircanary/places/templates/places/desktop.html
+++ b/aircanary/places/templates/places/desktop.html
@@ -27,15 +27,17 @@
 <div class="container" style="background: #fff">
     <div class="row" style="color: #333; padding: 10px">
         <div class="col-xs-3">
-            <div style="text-align: center; color: #333; padding-top: 5px"><strong style="color: #333">Air</strong><span style="color: #60bd22">C</span><span style="color: #f4bd00">a</span><span style="color: #f69721">n<span style="color: #c44812">a<span style="color: #980046">r</span><span style="color: #7c0020">y</span></div>
+            <div style="text-align: center; color: #333; padding-top: 5px"><strong style="color: #333">Air</strong><span style="color: #60bd22">C</span><span style="color: #f4bd00">a</span><span style="color: #f69721">n</span><span style="color: #c44812">a</span><span style="color: #980046">r</span><span style="color: #7c0020">y</span></div>
         </div>
         <div class="col-xs-3" style="color: #333">
+            <form action="/d" method="get" id="srchForm">
             <div class="input-group">
-                <input type="text" class="form-control input-sm" placeholder="Choose location">
+                <input type="text" id="srch" name="srch" value="{{ srch }}"  class="form-control input-sm" placeholder="Choose location">
                 <span class="input-group-btn">
-                    <button class="btn btn-default btn-sm" type="button"><span class="glyphicon glyphicon-search" style="color: #666"></span></button>
+                    <button id=srchButton" class="btn btn-default btn-sm" type="button"><span id="srchButtonSpan" class="glyphicon glyphicon-search" style="color: #666"></span></button>
                 </span>
             </div>
+            </form>
         </div>
         <div class="col-xs-6" style="color: #333; text-align: right; padding-top: 5px"><small style="color: #333">About</small></div>
     </div>
@@ -61,12 +63,12 @@
                         <div class="col-xs-2">&nbsp;</div>
                         <div class="col-xs-5 vcontainer {{ place.combined.css }}-dark" style="padding: 5px; text-align: center">
                             <div class="vcontent">
-                                <div>PM2.5 <span class="rounded-border">{{ place.pm25.value }}</span></div>
+                                <div>PM2.5 <span class="rounded-border {{ place.pm25.css }}-border">{{ place.pm25.value }}</span></div>
                             </div>
                         </div>
                         <div class="col-xs-5 vcontainer {{ place.combined.css }}-dark" style="padding: 5px; text-align: center">
                             <div class="vcontent">
-                                <div>Ozone <span class="rounded-border">{{ place.ozone.value }}</span></div>
+                                <div>Ozone <span class="rounded-border {{ place.ozone.css }}-border">{{ place.ozone.value }}</span></div>
                             </div>
                         </div>
                     </div>
@@ -99,9 +101,18 @@
     </div>
 </div>
 
+<div class="container" style="margin-top: 10px; color: #333">
+    <div><a href="/d?lat=34.05&amp;lon=-118.25">Los Angeles, CA</a></div>
+    <div><a href="/d?lat=34.1&amp;lon=-117.30">San Bernadino, CA</a></div>
+    <div><a href="/d?lat=29.97&amp;lon=-95.35">Houston, TX</a></div>
+</div>
 <script>
 $(function() {
     $('.legend-box').tooltip();
+
+    $('#srchButtonSpan').on('click', function() {
+        $('#srchForm').submit();
+    });
 });
 </script>
 
